# ShareSphere-Bloom-Filter

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: c-cpp.yml  cpp.yml  docker-image.yml  docker-publish.yml
header/: BlackList.h  BloomFilterArray.h  Filter.h  HashOne.h  HashSet.h  HashTwo.h  IHash.h  bloom_filter.h
src/: AddURLCommand.cpp  AddURLCommand.h  BlackList.cpp  BloomFilterArray.cpp  BloomFilterArray.h  ContainsURLCommand.cpp  ContainsURLCommand.h  Filter.cpp  HashOne.cpp  HashSet.cpp  HashTwo.cpp  ICommand.h  IHash.cpp  IHash.h  Input.cpp  Input.h  Runner.cpp  Runner.h  bloom_filter.cpp  bloom_filter.h  calc.h  main.cpp  tcpServer.cpp
src/BFApp/: Input.cpp  Input.h  Runner.cpp  Runner.h
src/BloomFilter/: BlackList.cpp  BlackList.h  BloomFilterArray.cpp  BloomFilterArray.h  Filter.cpp  Filter.h
src/Command/: AddURLCommand.cpp  AddURLCommand.h  ContainsURLCommand.cpp  ContainsURLCommand.h  ICommand.h
src/Hash/: HashOne.cpp  HashOne.h  HashSet.cpp  HashSet.h  HashTwo.cpp  HashTwo.h  IHash.h
src/header/: Runner.h
tests/: BFArrayTest.cpp  bf_test.cpp  calc_test.cpp  input_test.cpp  test_main.cpp
